<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >



<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginTop="5px"
    >
    
	
    <TextView  
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content" 
    android:text="@string/fecha"
    android:paddingTop="10px"
    android:paddingLeft="10px"
    />
    <Spinner 
    	android:id="@+id/fecha" 
    	android:layout_width="wrap_content" 
    	android:layout_height="wrap_content" 
    	android:layout_marginRight="20px"
    	android:minWidth="150px"
    	android:layout_x="70px" android:layout_y="42px"/>


</LinearLayout>	


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingTop="60px"
    android:layout_marginTop="20px"
    >
    <TextView  
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content" 
    android:text="@string/hora"
    android:paddingTop="10px"
    android:paddingLeft="10px"
    />
    
		<Spinner 
    	android:id="@+id/hora" 
    	android:layout_width="wrap_content" 
    	android:layout_height="wrap_content" 
    	android:layout_x="30px" 
    	android:layout_y="40px"
    	android:paddingTop="10px"/>
	
    	
   <TextView 
	android:text="@string/minuto"
	android:layout_width="wrap_content" 
	android:layout_height="wrap_content" />

	<Spinner android:id="@+id/minuto" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:paddingLeft="8px"
		android:textSize="14sp">
	</Spinner>
   
	</LinearLayout>
    
    



<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
   android:layout_marginTop="160px"
   
    >
    
	<Button 
		android:text="@string/porFecha" 
		android:id="@+id/porFecha" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content" 
	
        android:layout_marginLeft="42px" 

        />
		
		
<!--		<Button -->
<!--		android:text="@string/porCalle" -->
<!--		android:id="@+id/porCalle" -->
<!--		android:layout_width="wrap_content" -->
<!--		android:layout_height="wrap_content" -->
<!--		android:paddingTop="20px" -->
<!--		android:paddingLeft="20px" -->
<!--		android:paddingRight="20px" -->
<!--		android:paddingBottom="20px"-->
<!--		/>-->
<!--		-->




</LinearLayout>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="bottom"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
   android:layout_marginTop="160px"
   
    >

<Button 
		android:text="@string/volver" 
		android:id="@+id/volver" 
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content" 

		android:layout_marginLeft="250px" 
		/>

</LinearLayout>
	
</RelativeLayout>
